<resources>
    <string name="app_name">Happy Macro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_text">sign up</string>
    <string name="title_activity_goal2">goal2</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="passwordagain">passwordagain</string>
    <string name="we_can_do_this">We can do this,</string>
    <string name="but_we_need_a_little_info">but we need a little info</string>
    <string name="macro">Macro</string>
    <string name="happy">Happy</string>
    <string name="next">next</string>
    <string name="we_are_happy_to_see_you">We are happy to see you</string>
    <string name="welcome">Welcome</string>
    <string name="red_circle">red circle</string>
    <string name="back">back</string>
    <string name="Previous">Previous</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="hey_john">Hey, John</string>
    <string name="user">User</string>
    <string name="dashboard_messsage">You are what you eat so don\'t be fast, cheap, easy, or fake.</string>
    <string name="lets_do_this">Let\'s do this</string>
    <string name="keep_going">Keep Going</string>
    <string name="almost_there">Almost there</string>
    <string name="one_more_left">1 more left</string>
    <string name="you_did_it">YOU DID IT!</string>
    <string name="food_summary">\t\tDaily Macros\n\n\t\t\t\t\t\t\t\t\t\t\t\t800 out of 1600 used\n\n\t\tMeal Summary\n\n\t\t\t\t\tAvocado Toast 350 calories\n\n\t\t\t\t\tOne Sheet Pan Chicken 450 Calories\n\n\t\tYou\'re just 800 away from your gaol\n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\tWe got this!</string>
    <string name="Summary">Summary</string>
    <string name="body_goals">Body Goals</string>
    <string name="body_goals_message">No matter the numbers, we are proud of you and we believe in you!</string>
    <string name="weight">Weight</string>
    <string name="muscle_mass">Muscle Mass</string>
    <string name="_67">67%</string>
    <string name="_210_lb">210 lb</string>
    <string name="_81">81%</string>
    <string name="_150_lb">150 lb</string>
    <string name="exercise">Exercise</string>
    <string name="body_fat">Body Fat</string>
    <string name="_33">33%</string>
    <string name="_19">19%</string>
    <string name="_120_min">120 min</string>
    <string name="_80_min">80 min</string>
</resources>