<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4AF4DEB3"
    tools:context=".summary">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="322dp"
        android:layout_height="104dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/craftygirls"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/dashboard_messsage"
        android:textAlignment="gravity"
        android:textColor="#78909C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="407dp"
        android:layout_height="96dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/page_headings"
        android:fontFamily="@font/croissantone"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/hey_john"
        android:textAlignment="gravity"
        android:textColor="#050505"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/lets_do_this"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/keep_going"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/almost_there"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/one_more_left"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/craftygirls"
        android:text="@string/you_did_it"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/craftygirls"
        android:text="@string/food_summary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginTop="322dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/ic_baseline_add_circle_24"
        android:backgroundTint="#DA0E0E"
        android:foregroundTint="#E40707"
        android:textColor="#ED0A0A"
        android:textColorHighlight="#DF0A0A"
        android:textColorLink="#EC0505"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView"
        android:layout_alignBottom="@id/textView"
        android:layout_marginStart="344dp"
        android:layout_marginTop="24dp"
        android:accessibilityLiveRegion="none"
        android:background="#EEA76F"
        android:contentDescription="@string/user"
        android:minHeight="32dp"
        android:onClick="userInfo"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#1D6D8B"
        app:itemIconTint="#0D2A55"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>