<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".little_info">


    <ImageView
        android:id="@+id/rectimage1"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:contentDescription="@string/first_name"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <ImageView
        android:id="@+id/rectimage2"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:contentDescription="@string/last_name"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <ImageView
        android:id="@+id/rectimage3"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:contentDescription="@string/email"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <ImageView
        android:id="@+id/rectimage4"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:contentDescription="@string/password"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <ImageView
        android:id="@+id/halfRect1"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="26dp"
        android:contentDescription="@string/passwordagain"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/croissantone"
        android:onClick="nextButtonClick"
        android:text="@string/next"
        android:textColor="#0D2A55"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <TextView

        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/croissantone"
        android:text="@string/we_can_do_this"
        android:textColor="#0D2A55"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/croissantone"
        android:text="@string/but_we_need_a_little_info"
        android:textColor="#0D2A55"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/macro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/croissantone"
        android:text="@string/macro"
        android:textColor="#0D2A55"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/craftygirls"
        android:shadowColor="#0D2A55"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/happy"
        android:textColor="#0D2A55"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/currentWeight"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="@font/croissantone"
        android:inputType="textPersonName"
        android:text="Current Weight"
        android:textColor="#FF000000"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/rectimage2"
        app:layout_constraintEnd_toEndOf="@+id/rectimage1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectimage1"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/goalWeight"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:fontFamily="@font/croissantone"
        android:textColor="#FF000000"
        android:inputType="textPersonName"
        android:text="Goal Weight"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/rectimage3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentWeight"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/age"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:fontFamily="@font/croissantone"
        android:inputType="textPersonName"
        android:textColor="#FF000000"
        android:text="Age"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/rectimage4"
        app:layout_constraintEnd_toEndOf="@+id/rectimage3"
        app:layout_constraintStart_toStartOf="@+id/rectimage3"
        app:layout_constraintTop_toBottomOf="@+id/goalWeight"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/height"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:fontFamily="@font/croissantone"
        android:textColor="#FF000000"
        android:inputType="textPersonName"
        android:text="Height"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/halfRect1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/halfRect1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/halfRect1">


        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/radio_female"
            android:textColor="#FF000000"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="526dp" />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="95dp"
            android:layout_height="48dp"
            android:checked="true"
            android:textColor="#FF000000"
            android:text="@string/radio_male"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="529dp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>

